--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -49,7 +49,7 @@
   position: relative;
   &::after {
     content: '';
-    width: 10px;
+    width: 9px;
     height: 6px;
     top: 50%;
     right: 25px;
@@ -57,6 +57,7 @@
     background-repeat: no-repeat;
     background-image: url(../images/arrow-down.svg);
     position: absolute;
+    pointer-events: none;
   }
 }
 
@@ -67,6 +68,19 @@
   max-width: 100%;
   border-radius: 6px;
   border: 0.8px solid #afb0b9;
+}
+
+.form__select {
+  font-family: inherit;
+  color: $gray;
+  width: 220px;
+  height: 52px;
+  max-width: 100%;
+  border-radius: 6px;
+  border: 0.8px solid #afb0b9;
+  padding-left: 15px;
+  appearance: none;
+  cursor: pointer;
 }
 
 .form__btn {
