--- a/scss/_article.scss
+++ b/scss/_article.scss
@@ -1,10 +1,34 @@
 .article__title {
   padding-top: 120px;
+  @media (max-width: 1200px) {
+    padding-top: 50px;
+    text-align: center;
+  }
+  @media (max-width: 950px) {
+    padding-top: 0;
+  }
 }
 
 .article__wrapper {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.article__item {
+  @media (max-width: 1200px) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    max-width: 100%;
+    margin-bottom: 50px;
+  }
+  @media (max-width: 600px) {
+    width: 100%;
+    margin-bottom: 25px;
+  }
 }
 
 .article__image {
@@ -32,6 +56,9 @@
   color: $gray;
   max-width: 260px;
   margin: 0 0 10px;
+  @media (max-width: 550px) {
+    font-size: 14px;
+  }
 }
 
 .article__link {
