--- a/scss/_destinations.scss
+++ b/scss/_destinations.scss
@@ -1,10 +1,32 @@
 .destinations__title {
   padding-top: 120px;
+  @media (max-width: 1200px) {
+    padding-top: 50px;
+    text-align: center;
+  }
+  @media (max-width: 950px) {
+    padding-top: 0;
+  }
 }
 
 .destinations__wrapper {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.destinations__item {
+  @media (max-width: 1200px) {
+    display: flex;
+    justify-content: center;
+    width: 50%;
+    max-width: 100%;
+    margin-bottom: 50px;
+  }
+  @media (max-width: 600px) {
+    width: 100%;
+    margin-bottom: 25px;
+  }
 }
 
 .destinations__inner {
