--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -19,12 +19,24 @@ body {
   color: $gray;
 }
 
+@media (max-width: 950px) {
+  body.block {
+    overflow: hidden;
+    height: 100%;
+  }
+}
 .title {
   font-family: 'Playfair Display', serif;
   font-size: 36px;
   font-weight: 700;
   line-height: 1.3;
   color: #000;
+  @media (max-width: 950px) {
+    font-size: 34px;
+  }
+  @media (max-width: 550px) {
+    font-size: 32px;
+  }
 }
 
 .btn {
