--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -2,11 +2,20 @@
   display: flex;
   justify-content: space-between;
   padding-top: 50px;
+  @media (max-width: 1200px) {
+    flex-direction: column;
+  }
+  @media (max-width: 550px) {
+    padding-top: 20px;
+  }
 }
 
 .home__content {
   width: 470px;
   max-width: 100%;
+  @media (max-width: 1200px) {
+    width: 100%;
+  }
 }
 
 .home__title {
@@ -17,6 +26,24 @@
   color: $black;
   max-width: 370px;
   margin-bottom: 70px;
+  @media (max-width: 1200px) {
+    max-width: 1200px;
+    text-align: center;
+    margin-bottom: 40px;
+  }
+  @media (max-width: 950px) {
+    font-size: 58px;
+    margin: 0;
+  }
+  @media (max-width: 800px) {
+    font-size: 52px;
+  }
+  @media (max-width: 800px) {
+    font-size: 46px;
+  }
+  @media (max-width: 800px) {
+    font-size: 40px;
+  }
 }
 
 .home__subtitle {
@@ -26,6 +53,15 @@
   color: $black;
   margin-bottom: 60px;
   position: relative;
+  @media (max-width: 1200px) {
+    max-width: 1200px;
+    text-align: center;
+  }
+  @media (max-width: 550px) {
+    font-size: 18px;
+    margin-top: 10px;
+    margin-bottom: 35px;
+  }
   &::before {
     content: '';
     width: 32px;
@@ -35,6 +71,10 @@
     left: 0;
     bottom: -15px;
     position: absolute;
+    @media (max-width: 1200px) {
+      left: 50%;
+      transform: translateX(-50%);
+    }
   }
 }
 
@@ -42,6 +82,9 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  @media (max-width: 950px) {
+    flex-direction: column;
+  }
 }
 
 .input__wrapper {
@@ -61,15 +104,6 @@
   }
 }
 
-.form__input {
-  width: 220px;
-  height: 52px;
-  text-align: center;
-  max-width: 100%;
-  border-radius: 6px;
-  border: 0.8px solid #afb0b9;
-}
-
 .form__select {
   font-family: inherit;
   color: $gray;
@@ -81,14 +115,27 @@
   padding-left: 15px;
   appearance: none;
   cursor: pointer;
+  @media (max-width: 950px) {
+    width: 100%;
+  }
 }
 
 .form__btn {
   margin-top: 20px;
+  @media (max-width: 1200px) {
+    width: 50%;
+    max-width: 100%;
+    margin-left: 25%;
+    margin-bottom: 20px;
+  }
+  @media (max-width: 950px) {
+    width: 100%;
+    margin-left: 0;
+  }
 }
 
 .home__image {
-  margin-left: auto;
-  display: block;
   max-width: 100%;
+  object-fit: contain;
+  display: block;
 }
