--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -228,6 +228,17 @@
   overflow: hidden;
   transition: 0.6s;
   border-radius: 15px;
+  @media (max-width: 1200px) {
+    width: 75%;
+    transform: translate(-50%, 20%);
+    background-color: rgba(0, 0, 0, 0.85);
+  }
+  @media (max-width: 550px) {
+    top: -120%;
+    width: 90%;
+    height: 70%;
+    transform: translate(-50%, 20%);
+  }
   &--active {
     top: 0;
   }
@@ -258,6 +269,11 @@
   appearance: none;
   cursor: pointer;
   margin-bottom: 30px;
+  @media (max-width: 550px) {
+    width: 95%;
+    text-align: center;
+    padding-left: none;
+  }
 }
 
 .popup__btn {
@@ -266,6 +282,9 @@
   max-width: 100%;
   height: 50px;
   margin-top: 30px;
+  @media (max-width: 550px) {
+    width: 95%;
+  }
 }
 
 .exit {
@@ -280,6 +299,12 @@
   position: absolute;
   transform: rotate(45deg);
   cursor: pointer;
+  @media (max-width: 850px) {
+    right: 30px;
+  }
+  @media (max-width: 650px) {
+    display: none;
+  }
 }
 
 .exit::after {
